--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,15 +5,88 @@
     --bg-light: #E2F2F8;
     --accent-bright: #68CDD4;
     --accent-medium: #95DBE1;
-    --accent-small: background: #6563B8;
+    --accent-small: #6563B8;
     --links-color: #2F3878;
 }
 
 body {
+    position: relative;
+    min-height: 100vh;
+    min-width: 1170px;
+    box-sizing: border-box;
+    padding: 0;
+    padding-bottom: 194px;
+    margin: 0 auto;
+
     font-family: 'Source Sans Pro', 'Arial', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
     line-height: 30px; /* or 150% */
     color: var(--dark);
+
+    background-color: var(--white);
+}
+
+main {
+    padding: 0 98px;
+    /* padding-bottom: 194px; */
+    margin: 0 auto;
+    width: 1170px;
+    outline: auto;
+}
+
+.visually-hidden {
+    position: absolute;
+    clip: rect(1px, 1px, 1px, 1px);
+    padding: 0;
+    border: 0;
+    height: 1px;
+    width: 1px;
+    overflow: hidden;
+}
+
+.list-reset {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.link-reset {
+    color: inherit;
+    text-decoration: none;
+}
+
+img {
+    display: block;
+}
+
+
+[class*="-link"][href]:hover,
+[class*="-link"][href]:focus-visible {
+    opacity: 0.7;
+    border-bottom: 1px solid var(--dark);
+}
+[class*="-link"][href]:active {
+    opacity: 0.4;
+}
+[class*="-link"][href]:has(img):hover,
+[class*="-link"][href]:has(img):focus-visible {
+    border: none;
+}
+
+
+
+[class*="-btn"]:hover,
+[class*="-btn"]:focus-visible {
+    opacity: 0.7;
+    cursor: pointer;
+}
+[class*="-btn"]:active {
+    opacity: 0.4;
+}
+[class*="-btn"]:disabled {
+    background-color: lightgray;
+    color: rgb(78, 78, 78);
+    cursor: default;
 }
