--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,13 +10,12 @@
 }
 
 body {
-    position: relative;
     min-height: 100vh;
     min-width: 1170px;
-    box-sizing: border-box;
     padding: 0;
-    padding-bottom: 194px;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
 
     font-family: 'Source Sans Pro', 'Arial', sans-serif;
     font-style: normal;
@@ -30,10 +29,9 @@ body {
 
 main {
     padding: 0 98px;
-    /* padding-bottom: 194px; */
-    margin: 0 auto;
+    margin: auto;
     width: 1170px;
-    outline: auto;
+    flex: 1 0 auto;
 }
 
 .visually-hidden {
