make aricle's header and intro part

--- a/styles/main-footer.css
+++ b/styles/main-footer.css
@@ -1,5 +1,5 @@
 .main-footer {
-    /* версия закрепления футера внизу с позиционированием, требует у body:display: 
+    /* версия закрепления футера внизу с позиционированием, требует у body: 
         position: relative для позиционирования
         padding-bottom: 194px = высота футера + расстояние до контента
         box-sizing: border-box - чтобы паддинг не влиял на общую высоту
@@ -8,6 +8,7 @@
     left: 0;
     right: 0;
     bottom: 0; */
+
     flex: 0 0 auto;
     margin-top: 80px;
 
