--- a/styles/article.css
+++ b/styles/article.css
@@ -1,4 +1,122 @@
 .article {
-    width: 770px;
     margin: 0 auto;
+}
+
+        /* ----- HEADER ----- */
+
+.article-header {
+    padding: 126px 0 142px 0;
+    text-align: center;
+    background-color: var(--bg-dark);
+    color: var(--white);
+    margin-bottom: 60px;
+}
+.article-header__container {
+    width: 1366px;
+    margin: 0 auto;
+    position: relative;
+}
+.article-header__container::after {
+    content: "";
+    position: absolute;
+    top: -53px;
+    left: 107px;
+    width: 170px;
+    height: 253px;
+    background-image: url(../img/microscope-pic.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+}
+.article-header__container::before {
+    content: "";
+    position: absolute;
+    top: -13px;
+    right: 110px;
+    width: 179px;
+    height: 211px;
+    background-image: url(../img/loupe-pic.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+}
+
+.article-header__tag {
+    margin: 0;
+    margin-bottom: 20px;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px; /* identical to box height, or 125% */
+    color: var(--accent-bright);
+}
+.article-header__title {
+    margin: 0;
+    margin-bottom: 10px;
+    font-weight: 600;
+    font-size: 46px;
+    line-height: 52px; /* identical to box height, or 113% */
+}
+.article-header__subtitle {
+    margin: 0;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 35px; /* or 146% */
+}
+
+.article-lead {
+    font-size: 24px;
+    line-height: 34px; /* or 142% */
+    margin: 0;
+    margin-bottom: 30px;
+}
+
+        /* ----- CONTENTS ----- */
+
+
+.article__contents-title {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 30px; /* identical to box height, or 125% */
+    margin: 33px 0 19px 0;
+}
+.article__contents-list {
+    counter-reset: contents-number;
+}
+.article__contents-item:not(:last-child) {
+    margin-bottom: 10px;
+}
+.article__contents-item {
+    counter-increment: content-number;
+}
+.article__contents-item::before {
+    content: counter(content-number) ".";
+    font-weight: 600;
+}
+
+.article__contents-link {
+    color: var(--links-color);
+}
+.article__contents-link[href]:hover,
+.article__contents-link[href]:focus-visible {
+    opacity: 0.7;
+    border-bottom: none;
+}
+.article__contents-link[href]:active {
+    opacity: 0.4;
+}
+
+        /* ----- ARTICLE OBJECTS ----- */
+
+.section-title {
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 40px; /* identical to box height, or 125% */
+    margin: 60px 0 30px 0;
+}
+
+.section-subtitle {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 30px; /* identical to box height, or 125% */
+    margin: 30px 0 20px;
 }
